proximity IDEADEV-18873